# architect

./: Cargo.toml  README.md
src/: app.rs  main.rs
src/app/: cli.rs  context.rs  generator.rs
